# korrvigs

./: .envrc  .gitignore  .pre-commit-config.yaml  .rubocop.yml  Gemfile  LICENSE  default.nix  extract.rb  flake.nix  gemset.nix  korrvigs.cabal  main.py  nixos.nix  static.nix  test.pl  webcomics.pl  weeder.toml
db/: reset.pgsql  schema.pgsql
doc/: purge.pgsql  schema.pgsql  updatea517ca96.jq
engine/: config.pl  default.nix  main.pl  main.py  test.pl
engine/modules/: actions.pl  adoc.pl  ctx.pl  files.pl  fzf.pl  norg.pl  nvim.pl  plugins.pl  popup.pl  server.pl  webcomics.pl  wiki.pl  xdg.pl
engine/plugins/: adoc.pl  comics.pl  open_text.pl  open_url.pl  plugins.pl  select_file.pl
engine/posix/: main.c
extractor/: Gemfile  extract.rb  gemset.nix
haskell/: CHANGELOG.md  default.nix  korrvigs-web.cabal
haskell/app/: Main.hs
haskell/app/Korrvigs/: Classes.hs  DB.hs  Definition.hs  Entry.hs  Pandoc.hs  Relations.hs  Schema.hs  Tree.hs  Web.hs
haskell/app/Korrvigs/Classes/: Colors.hs  Generate.hs  Generated.hs  Sync.hs
haskell/app/Korrvigs/Relations/: Generate.hs  Generated.hs  Parser.hs
haskell/app/Korrvigs/Web/: Backend.hs  DB.hs  Editor.hs  Entry.hs  Form.hs  Header.hs  Method.hs  Query.hs  Ressources.hs  Routes.hs  Sub.hs  UUID.hs
lib/: Korrvigs.hs
lib/Data/: ERIS.hs  FIT.hs  MBTiles.hs  Viking.hs
lib/Data/ERIS/: Crypto.hs  Decode.hs  Encode.hs  StreamingEncode.hs  Test.hs
lib/Data/ERIS/DB/: Class.hs  Plain.hs
lib/Data/FIT/: Data.hs  Interpreter.hs  Messages.hs  Parser.hs
lib/Data/Viking/: Data.hs  Parser.hs
lib/Korrvigs/: Actions.hs  AllEntries.hs  Calendar.hs  Cli.hs  Compute.hs  Entry.hs  Event.hs  FTS.hs  Favourites.hs  File.hs  Format.hs  Geometry.hs  Kind.hs  KindData.hs  Link.hs  Metadata.hs  Monad.hs  Note.hs  Query.hs  Syndicate.hs  Utils.hs  Web.hs
lib/Korrvigs/Actions/: Collections.hs  Compute.hs  Load.hs  Metadata.hs  Remove.hs  SQL.hs  Sync.hs  Utils.hs
lib/Korrvigs/Calendar/: DAV.hs  JSON.hs  New.hs  SQL.hs  Sync.hs
lib/Korrvigs/Cli/: ADB.hs  Autorun.hs  Blog.hs  Collections.hs  Compute.hs  Config.hs  ERIS.hs  Event.hs  File.hs  Import.hs  Info.hs  Init.hs  Link.hs  Monad.hs  Mtdt.hs  New.hs  Note.hs  Query.hs  Remove.hs  Server.hs  Sync.hs
lib/Korrvigs/Compute/: Action.hs  Builtin.hs  Computation.hs  Declare.hs  Run.hs  Runnable.hs  SQL.hs  Type.hs
lib/Korrvigs/Entry/: Def.hs  Ident.hs  New.hs  SQL.hs
lib/Korrvigs/Entry/Ident/: English.hs  French.hs  Stopwords.hs
lib/Korrvigs/Event/: ICalendar.hs  New.hs  SQL.hs  Sync.hs  VDirSyncer.hs
lib/Korrvigs/FTS/: Parser.hs  Query.hs  Render.hs  SQL.hs
lib/Korrvigs/File/: Computation.hs  Download.hs  Mtdt.hs  New.hs  SQL.hs  Sync.hs
lib/Korrvigs/Geometry/: Def.hs  SQL.hs  WKB.hs
lib/Korrvigs/Kind/: Def.hs  SQL.hs
lib/Korrvigs/Link/: Download.hs  JSON.hs  New.hs  SQL.hs  Sync.hs
lib/Korrvigs/Metadata/: Android.hs  Blog.hs  Collections.hs  Media.hs  TH.hs  Task.hs
lib/Korrvigs/Monad/: Class.hs  Collections.hs  Computation.hs  Metadata.hs  Remove.hs  SQL.hs  Sync.hs  Syndicate.hs  Utils.hs
lib/Korrvigs/Note/: AST.hs  Code.hs  Download.hs  Edit.hs  Helpers.hs  Languages.hs  Loc.hs  New.hs  Pandoc.hs  Render.hs  SQL.hs  Sync.hs
lib/Korrvigs/Syndicate/: Item.hs  JSON.hs  New.hs  Run.hs  SQL.hs  Sync.hs
lib/Korrvigs/Utils/: Base16.hs  Crypto.hs  Cycle.hs  DAV.hs  DateParser.hs  DateTree.hs  Git.hs  JSON.hs  Lens.hs  Opaleye.hs  Pandoc.hs  Process.hs  Text.hs  Time.hs  WebDAV.hs  XML.hs
lib/Korrvigs/Web/: Ace.hs  Actions.hs  Backend.hs  Bibtex.hs  Blog.hs  Collections.hs  Compute.hs  Date.hs  Download.hs  Entry.hs  File.hs  Foliate.hs  FullCalendar.hs  Fuse.hs  Git.hs  Home.hs  Leaflet.hs  Login.hs  Metadata.hs  Note.hs  PhotoSwipe.hs  Public.hs  Ressources.hs  Routes.hs  Search.hs  Syn.hs  Utils.hs  Vis.hs  Widgets.hs
neovim/lua/: korrvigs.lua
new/: CHANGELOG.md  LICENSE  default.nix  korrvigs.cabal
new/cli/: Main.hs
new/cli/Korrvigs/: Cli.hs
new/cli/Korrvigs/Cli/: Link.hs  Monad.hs
new/doc/: description.md  schema.pgsql
new/lib/Korrvigs/: Actions.hs  AllEntries.hs  Cli.hs  Entry.hs  FTS.hs  File.hs  Geometry.hs  Kind.hs  KindData.hs  Link.hs  Metadata.hs  Monad.hs  Note.hs  Utils.hs
new/lib/Korrvigs/Actions/: Load.hs  Remove.hs  Sync.hs
new/lib/Korrvigs/Cli/: File.hs  Info.hs  Link.hs  Note.hs
new/lib/Korrvigs/Entry/: Def.hs  Ident.hs  SQL.hs
new/lib/Korrvigs/FTS/: Parser.hs  Query.hs  SQL.hs
new/lib/Korrvigs/File/: Mtdt.hs  New.hs  SQL.hs  Sync.hs
new/lib/Korrvigs/File/Mtdt/: ExifTool.hs  Pandoc.hs  PdfToText.hs
new/lib/Korrvigs/Geometry/: SQL.hs  WKB.hs
new/lib/Korrvigs/Kind/: Def.hs  Entry.hs  SQL.hs  Schema.hs
new/lib/Korrvigs/Link/: JSON.hs  New.hs  SQL.hs  Sync.hs
new/lib/Korrvigs/Note/: AST.hs  Helpers.hs  Pandoc.hs  Render.hs  SQL.hs  Sync.hs
new/lib/Korrvigs/Note/Render/: Monad.hs  Table.hs
new/lib/Korrvigs/Utils/: DateParser.hs  DateTree.hs  JSON.hs  Opaleye.hs  Pandoc.hs
nix/: hm.nix
nushell/: annotated.pl  arran.nu  classes.pl  date.nu  files.nu  find_unnanotated.sh  graph.dot  korr.nu  notes.nu  ontology.nu  person.nu  process.nu  start.nu  tree.dot  ui.nu  utils.nu
piper/: Makefile  default.nix  main.c
posix/: Makefile  default.nix  posix.pl
racket/: datalog-utils.rkt  default.nix  files.rkt  info.rkt  main.rktl  parser.rkt  server.rkt
reflex/: .gitignore  .pre-commit-config.yaml  LICENSE  backend.cabal  default.nix  flake.nix
reflex/app/: Individual.hs  Main.hs
ressources/: hdrmap.hdr
ressources/js/: actions.js  checkbox.js  header.js  mtdt.js  syn-menu.js  syndicates.js
scripts/: edit.sh
server/: CHANGELOG.md  CMakeLists.txt  default.nix  korrvigs-server.cabal
server/app/: Datalog.hs  Souffle.hs
server/cmake/: FindSouffle.cmake
server/src/: CMakeLists.txt  datalog.cpp  datalog.hpp  json.cpp  json.hpp  main.cpp  parser.hpp  parser_impl.cpp  parser_impl.hpp  souffle.cpp  souffle.hpp  typer.cpp  typer.hpp
test/: Main.hs
tree-sitter/: Makefile  default.nix  main.c  norg-parser.pl
tui/: default.nix  go.mod  go.sum  korrvigs.go  main.go  select.go  tui.go
(+144 files in other folders)
