cabal-version:   3.0
name:            korrvigs
version:         0.1.0.0
synopsis:        A wiki system for my personal use

-- description:
license:         MIT
license-file:    LICENSE
author:          DwarfMaster
maintainer:      korrvigs@dwarfmaster.net

-- copyright:
category:        Database
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

executable korrvigs-cli
  main-is:            Main.hs
  default-language:   Haskell2010
  hs-source-dirs:     cli
  default-extensions: NoImplicitPrelude
  build-depends:      korrvigs-lib
  ghc-options:        -threaded -fwrite-ide-info

library korrvigs-lib
  ghc-options:        -Wall -Werror=incomplete-patterns -fwrite-ide-info
  exposed-modules:
    Korrvigs
    Korrvigs.Actions
    Korrvigs.Actions.Metadata
    Korrvigs.Actions.Remove
    Korrvigs.Actions.SQL
    Korrvigs.Actions.Sync
    Korrvigs.Actions.Utils
    Korrvigs.Calendar
    Korrvigs.Calendar.DAV
    Korrvigs.Calendar.JSON
    Korrvigs.Calendar.New
    Korrvigs.Calendar.SQL
    Korrvigs.Calendar.Sync
    Korrvigs.Cli
    Korrvigs.Cli.Collections
    Korrvigs.Cli.Compute
    Korrvigs.Cli.Config
    Korrvigs.Cli.Event
    Korrvigs.Cli.File
    Korrvigs.Cli.Info
    Korrvigs.Cli.Init
    Korrvigs.Cli.Link
    Korrvigs.Cli.Monad
    Korrvigs.Cli.New
    Korrvigs.Cli.Note
    Korrvigs.Cli.Query
    Korrvigs.Cli.Server
    Korrvigs.Cli.Sync
    Korrvigs.Compute
    Korrvigs.Compute.Builtin
    Korrvigs.Entry
    Korrvigs.Entry.Def
    Korrvigs.Entry.Ident
    Korrvigs.Entry.Ident.English
    Korrvigs.Entry.Ident.French
    Korrvigs.Entry.New
    Korrvigs.Entry.SQL
    Korrvigs.Event
    Korrvigs.Event.ICalendar
    Korrvigs.Event.ICalendar.Defs
    Korrvigs.Event.ICalendar.Parser
    Korrvigs.Event.ICalendar.Parser.Basic
    Korrvigs.Event.ICalendar.Parser.Types
    Korrvigs.Event.ICalendar.Render
    Korrvigs.Event.ICalendar.RRule
    Korrvigs.Event.ICalendar.TimeZone
    Korrvigs.Event.New
    Korrvigs.Event.SQL
    Korrvigs.Event.Sync
    Korrvigs.File
    Korrvigs.File.Mtdt
    Korrvigs.File.Mtdt.ExifTool
    Korrvigs.File.Mtdt.GPX
    Korrvigs.File.Mtdt.Pandoc
    Korrvigs.File.Mtdt.PdfToText
    Korrvigs.File.New
    Korrvigs.File.SQL
    Korrvigs.File.Sync
    Korrvigs.Format
    Korrvigs.FTS
    Korrvigs.FTS.Parser
    Korrvigs.FTS.Query
    Korrvigs.FTS.Render
    Korrvigs.FTS.SQL
    Korrvigs.Geometry
    Korrvigs.Geometry.Def
    Korrvigs.Geometry.SQL
    Korrvigs.Geometry.WKB
    Korrvigs.Kind
    Korrvigs.Kind.Def
    Korrvigs.Kind.SQL
    Korrvigs.Link
    Korrvigs.Link.JSON
    Korrvigs.Link.New
    Korrvigs.Link.SQL
    Korrvigs.Link.Sync
    Korrvigs.Metadata
    Korrvigs.Metadata.Collections
    Korrvigs.Metadata.Media
    Korrvigs.Metadata.Media.Ontology
    Korrvigs.Metadata.Media.Pandoc
    Korrvigs.Metadata.Task
    Korrvigs.Metadata.TH
    Korrvigs.Monad
    Korrvigs.Note
    Korrvigs.Note.AST
    Korrvigs.Note.Helpers
    Korrvigs.Note.Loc
    Korrvigs.Note.New
    Korrvigs.Note.Pandoc
    Korrvigs.Note.Render
    Korrvigs.Note.Render.Monad
    Korrvigs.Note.Render.Table
    Korrvigs.Note.SQL
    Korrvigs.Note.Sync
    Korrvigs.Query
    Korrvigs.Utils
    Korrvigs.Utils.Base16
    Korrvigs.Utils.Cycle
    Korrvigs.Utils.DateParser
    Korrvigs.Utils.DateTree
    Korrvigs.Utils.DAV
    Korrvigs.Utils.DAV.Cal
    Korrvigs.Utils.DAV.Web
    Korrvigs.Utils.Git
    Korrvigs.Utils.Git.Annex
    Korrvigs.Utils.Git.Commit
    Korrvigs.Utils.Git.Status
    Korrvigs.Utils.JSON
    Korrvigs.Utils.Lens
    Korrvigs.Utils.Opaleye
    Korrvigs.Utils.Pandoc
    Korrvigs.Utils.Process
    Korrvigs.Utils.Time
    Korrvigs.Utils.XML
    Korrvigs.Web
    Korrvigs.Web.Ace
    Korrvigs.Web.Backend
    Korrvigs.Web.Collections
    Korrvigs.Web.Compute
    Korrvigs.Web.Download
    Korrvigs.Web.Entry
    Korrvigs.Web.Entry.Calendar
    Korrvigs.Web.Entry.Event
    Korrvigs.Web.Entry.File
    Korrvigs.Web.Entry.Link
    Korrvigs.Web.Entry.Metadata
    Korrvigs.Web.Entry.Note
    Korrvigs.Web.Git
    Korrvigs.Web.Home
    Korrvigs.Web.Leaflet
    Korrvigs.Web.Metadata
    Korrvigs.Web.Note
    Korrvigs.Web.PhotoSwipe
    Korrvigs.Web.Public
    Korrvigs.Web.Public.Crypto
    Korrvigs.Web.Ressources
    Korrvigs.Web.Ressources.Helpers
    Korrvigs.Web.Routes
    Korrvigs.Web.Search
    Korrvigs.Web.Utils
    Korrvigs.Web.Vis.Network
    Korrvigs.Web.Vis.Timeline
    Korrvigs.Web.Widgets

  build-depends:
    , aeson                 ^>=2.1.2.1
    , array                 ^>=0.5.4.0
    , async                 ^>=2.2.4
    , base                  ^>=4.18.2.1
    , base16-bytestring     ^>=1.0.2.0
    , base64                ^>=0.4.2.4
    , binary                ^>=0.8.9.0
    , blaze-html            ^>=0.9.2.0
    , blaze-markup          ^>=0.8.3.0
    , bytestring            ^>=0.11.4.0
    , case-insensitive      ^>=1.2.1.0
    , citeproc              ^>=0.8.1
    , clientsession         ^>=0.9.1.0
    , clock                 ^>=0.8.4
    , conduit               ^>=1.3.5
    , conduit-extra         ^>=1.3.6
    , containers            ^>=0.6.5.0
    , crypton               ^>=0.34
    , data-default          ^>=0.7.1.0
    , data-endian           ^>=0.1.1
    , deepseq               ^>=1.4.8.1
    , directory             ^>=1.3.6.2
    , entropy               ^>=0.4.1.10
    , extra                 ^>=1.7.13
    , file-embed            ^>=0.0.16.0
    , filepath              ^>=1.4.2.2
    , hmatrix-glpk          ^>=0.19.0.0
    , http-client           ^>=0.7.17
    , http-client-tls       ^>=0.3.6.3
    , http-conduit          ^>=2.3.8.3
    , http-types            ^>=0.12.4
    , HUnit                 ^>=1.6.2.0
    , iconv                 ^>=0.4.1.3
    , lens                  ^>=5.2.3
    , lens-aeson            ^>=1.2.3
    , linear                ^>=1.22
    , memory                ^>=0.18
    , mime-types            ^>=0.1.2.0
    , monad-loops           ^>=0.4.3
    , mtl                   ^>=2.3.1
    , network-uri           ^>=2.6.4.2
    , opaleye               ^>=0.10.2.0
    , optparse-applicative  ^>=0.18.1.0
    , pandoc                ^>=3.1.11.1
    , pandoc-types          ^>=1.23.1
    , parsec                ^>=3.1.15.0
    , parsec3-numbers       ^>=0.1.0
    , password              ^>=3.0.4.0
    , postgresql-simple     ^>=0.7.0.0
    , process               ^>=1.6.18.0
    , product-profunctors   ^>=0.11.1.0
    , profunctors           ^>=5.6.2
    , random                ^>=1.2.1.2
    , shakespeare           ^>=2.1.0.1
    , split                 ^>=0.2.5
    , template-haskell      ^>=2.20.0.0
    , temporary             ^>=1.3
    , text                  ^>=2.0.2
    , text-builder          ^>=0.6.7.2
    , text-manipulate       ^>=0.3.1.0
    , time                  ^>=1.12.2
    , transformers          ^>=0.6.1.0
    , unix                  ^>=2.8.4.0
    , utf8-string           ^>=1.0.2
    , vector                ^>=0.13.1.0
    , xdg-basedir           ^>=0.2.2
    , xml-conduit           ^>=1.9.1.3
    , yaml                  ^>=0.11.11.2
    , yesod                 ^>=1.6.2.0
    , yesod-core            ^>=1.6.2.0
    , yesod-static          ^>=1.6.1.0

  default-extensions:
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    QuasiQuotes
    ScopedTypeVariables
    TemplateHaskell
    TupleSections
    TypeFamilies
    TypeOperators
    ViewPatterns

  default-language:   Haskell2010
  hs-source-dirs:     lib

test-suite korrvigs-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base          ^>=4.18.2.1
    , HUnit         ^>=1.6.2.0
    , korrvigs-lib
