cabal-version:   3.0
name:            korrvigs
version:         0.1.0.0
synopsis:        A wiki system for my personal use

-- description:
license:         MIT
license-file:    LICENSE
author:          DwarfMaster
maintainer:      korrvigs@dwarfmaster.net

-- copyright:
category:        Database
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

executable korrvigs-cli
  main-is:            Main.hs
  default-language:   Haskell2010
  hs-source-dirs:     cli
  default-extensions: NoImplicitPrelude
  build-depends:      korrvigs-lib
  ghc-options:        -threaded -fwrite-ide-info

library korrvigs-lib
  ghc-options:        -Wall -Werror=incomplete-patterns -fwrite-ide-info
  exposed-modules:
    Data.ERIS
    Data.ERIS.Crypto
    Data.ERIS.DB.Class
    Data.ERIS.DB.Plain
    Data.ERIS.Decode
    Data.ERIS.Encode
    Data.ERIS.StreamingEncode
    Data.ERIS.Test
    Korrvigs
    Korrvigs.Calendar
    Korrvigs.Calendar.DAV
    Korrvigs.Calendar.JSON
    Korrvigs.Calendar.New
    Korrvigs.Calendar.SQL
    Korrvigs.Calendar.Sync
    Korrvigs.Cli
    Korrvigs.Cli.ADB
    Korrvigs.Cli.Compute
    Korrvigs.Cli.Config
    Korrvigs.Cli.ERIS
    Korrvigs.Cli.Event
    Korrvigs.Cli.File
    Korrvigs.Cli.Import
    Korrvigs.Cli.Info
    Korrvigs.Cli.Monad
    Korrvigs.Cli.New
    Korrvigs.Cli.Note
    Korrvigs.Cli.Query
    Korrvigs.Cli.Server
    Korrvigs.Cli.Sync
    Korrvigs.Compute
    Korrvigs.Compute.Run
    Korrvigs.Compute.Runnable
    Korrvigs.Compute.SQL
    Korrvigs.Compute.Type
    Korrvigs.Entry
    Korrvigs.Entry.Def
    Korrvigs.Entry.Ident
    Korrvigs.Entry.Ident.English
    Korrvigs.Entry.Ident.French
    Korrvigs.Entry.New
    Korrvigs.Entry.SQL
    Korrvigs.Event
    Korrvigs.Event.ICalendar
    Korrvigs.Event.ICalendar.Defs
    Korrvigs.Event.ICalendar.Parser
    Korrvigs.Event.ICalendar.Parser.Basic
    Korrvigs.Event.ICalendar.Parser.Types
    Korrvigs.Event.ICalendar.Render
    Korrvigs.Event.ICalendar.RRule
    Korrvigs.Event.ICalendar.TimeZone
    Korrvigs.Event.New
    Korrvigs.Event.SQL
    Korrvigs.Event.Sync
    Korrvigs.File
    Korrvigs.File.Computation
    Korrvigs.File.Mtdt
    Korrvigs.File.Mtdt.ExifTool
    Korrvigs.File.Mtdt.GPX
    Korrvigs.File.Mtdt.Pandoc
    Korrvigs.File.Mtdt.PdfToText
    Korrvigs.File.New
    Korrvigs.File.SQL
    Korrvigs.File.Sync
    Korrvigs.Format
    Korrvigs.FTS
    Korrvigs.FTS.Parser
    Korrvigs.FTS.Query
    Korrvigs.FTS.Render
    Korrvigs.FTS.SQL
    Korrvigs.Geometry
    Korrvigs.Geometry.Def
    Korrvigs.Geometry.SQL
    Korrvigs.Geometry.WKB
    Korrvigs.Kind
    Korrvigs.Kind.Def
    Korrvigs.Kind.SQL
    Korrvigs.Metadata
    Korrvigs.Metadata.Android
    Korrvigs.Metadata.Android.ADB
    Korrvigs.Metadata.Media
    Korrvigs.Metadata.Media.Arxiv
    Korrvigs.Metadata.Media.Export
    Korrvigs.Metadata.Media.GitHub
    Korrvigs.Metadata.Media.Hackernews
    Korrvigs.Metadata.Media.IGDB
    Korrvigs.Metadata.Media.MangaUpdates
    Korrvigs.Metadata.Media.MusicBrainz
    Korrvigs.Metadata.Media.New
    Korrvigs.Metadata.Media.OMDB
    Korrvigs.Metadata.Media.Ontology
    Korrvigs.Metadata.Media.OpenLibrary
    Korrvigs.Metadata.Media.Pandoc
    Korrvigs.Metadata.Media.Steam
    Korrvigs.Metadata.Media.Youtube
    Korrvigs.Metadata.Task
    Korrvigs.Metadata.TH
    Korrvigs.Monad
    Korrvigs.Monad.Class
    Korrvigs.Monad.Collections
    Korrvigs.Monad.Computation
    Korrvigs.Monad.Metadata
    Korrvigs.Monad.Remove
    Korrvigs.Monad.SQL
    Korrvigs.Monad.Sync
    Korrvigs.Monad.Utils
    Korrvigs.Note
    Korrvigs.Note.AST
    Korrvigs.Note.Code
    Korrvigs.Note.Download
    Korrvigs.Note.Download.Books
    Korrvigs.Note.Download.Video
    Korrvigs.Note.Helpers
    Korrvigs.Note.Loc
    Korrvigs.Note.New
    Korrvigs.Note.Pandoc
    Korrvigs.Note.Render
    Korrvigs.Note.Render.Monad
    Korrvigs.Note.Render.Table
    Korrvigs.Note.SQL
    Korrvigs.Note.Sync
    Korrvigs.Query
    Korrvigs.Syndicate
    Korrvigs.Syndicate.Item
    Korrvigs.Syndicate.JSON
    Korrvigs.Syndicate.New
    Korrvigs.Syndicate.Run
    Korrvigs.Syndicate.SQL
    Korrvigs.Syndicate.Sync
    Korrvigs.Utils
    Korrvigs.Utils.Base16
    Korrvigs.Utils.Crypto
    Korrvigs.Utils.Cycle
    Korrvigs.Utils.DateParser
    Korrvigs.Utils.DateTree
    Korrvigs.Utils.DAV
    Korrvigs.Utils.DAV.Cal
    Korrvigs.Utils.DAV.Web
    Korrvigs.Utils.Git
    Korrvigs.Utils.Git.Annex
    Korrvigs.Utils.Git.Commit
    Korrvigs.Utils.Git.Status
    Korrvigs.Utils.JSON
    Korrvigs.Utils.Lens
    Korrvigs.Utils.Opaleye
    Korrvigs.Utils.Pandoc
    Korrvigs.Utils.Process
    Korrvigs.Utils.Text
    Korrvigs.Utils.Time
    Korrvigs.Utils.XML
    Korrvigs.Web
    Korrvigs.Web.Ace
    Korrvigs.Web.Actions
    Korrvigs.Web.Actions.Bibtex
    Korrvigs.Web.Actions.Collection
    Korrvigs.Web.Actions.Compute
    Korrvigs.Web.Actions.Defs
    Korrvigs.Web.Actions.EventSync
    Korrvigs.Web.Actions.Export
    Korrvigs.Web.Actions.New
    Korrvigs.Web.Actions.Parent
    Korrvigs.Web.Actions.Remove
    Korrvigs.Web.Actions.RSS
    Korrvigs.Web.Actions.Share
    Korrvigs.Web.Actions.Title
    Korrvigs.Web.Actions.Update
    Korrvigs.Web.Backend
    Korrvigs.Web.Bibtex
    Korrvigs.Web.Compute
    Korrvigs.Web.Download
    Korrvigs.Web.Entry
    Korrvigs.Web.Entry.Calendar
    Korrvigs.Web.Entry.Event
    Korrvigs.Web.Entry.File
    Korrvigs.Web.Entry.Metadata
    Korrvigs.Web.Entry.Note
    Korrvigs.Web.Entry.Syndicate
    Korrvigs.Web.FullCalendar
    Korrvigs.Web.Fuse
    Korrvigs.Web.Git
    Korrvigs.Web.Home
    Korrvigs.Web.Leaflet
    Korrvigs.Web.Metadata
    Korrvigs.Web.Note
    Korrvigs.Web.Note.Col
    Korrvigs.Web.PhotoSwipe
    Korrvigs.Web.Public
    Korrvigs.Web.Public.Crypto
    Korrvigs.Web.Ressources
    Korrvigs.Web.Ressources.Helpers
    Korrvigs.Web.Routes
    Korrvigs.Web.Search
    Korrvigs.Web.Search.Form
    Korrvigs.Web.Search.Results
    Korrvigs.Web.Syn
    Korrvigs.Web.Utils
    Korrvigs.Web.Vis.Network
    Korrvigs.Web.Vis.Timeline
    Korrvigs.Web.Widgets

  build-depends:
    , aeson                 ^>=2.2.3.0
    , aeson-pretty          ^>=0.8.10
    , array                 ^>=0.5.4.0
    , async                 ^>=2.2.4
    , base                  ^>=4.19.2.0
    , base16-bytestring     ^>=1.0.2.0
    , base32                ^>=0.4
    , base64                ^>=1.0
    , binary                ^>=0.8.9.0
    , blaze-html            ^>=0.9.2.0
    , blaze-markup          ^>=0.8.3.0
    , bytestring            ^>=0.12.1.0
    , case-insensitive      ^>=1.2.1.0
    , cassava               ^>=0.5.3.2
    , citeproc              ^>=0.8.1
    , clientsession         ^>=0.9.1.0
    , clock                 ^>=0.8.4
    , conduit               ^>=1.3.5
    , conduit-aeson         ^>=0.1.1.0
    , conduit-extra         ^>=1.3.6
    , containers            ^>=0.6.5.0
    , crypton               ^>=1.0.4
    , crypton-connection    ^>=0.4.4
    , data-default          ^>=0.7.1.0
    , data-endian           ^>=0.1.1
    , deepseq               ^>=1.5.1.0
    , directory             ^>=1.3.6.2
    , entropy               ^>=0.4.1.10
    , exceptions            ^>=0.10.7
    , extra                 ^>=1.7.13
    , feed                  ^>=1.3.2.1
    , file-embed            ^>=0.0.16.0
    , filepath              ^>=1.4.2.2
    , hmatrix-glpk          ^>=0.19.0.0
    , http-client           ^>=0.7.17
    , http-client-tls       ^>=0.3.6.3
    , http-conduit          ^>=2.3.8.3
    , http-types            ^>=0.12.4
    , HUnit                 ^>=1.6.2.0
    , iconv                 ^>=0.4.1.3
    , isbn                  ^>=1.1.0.5
    , lens                  ^>=5.3.4
    , lens-aeson            ^>=1.2.3
    , linear                ^>=1.23.1
    , memory                ^>=0.18
    , mime-types            ^>=0.1.2.0
    , monad-loops           ^>=0.4.3
    , mtl                   ^>=2.3.1
    , neat-interpolation    ^>=0.5.1.4
    , network-uri           ^>=2.6.4.2
    , opaleye               ^>=0.10.2.0
    , optparse-applicative  ^>=0.18.1.0
    , pandoc                ^>=3.6
    , pandoc-types          ^>=1.23.1
    , parsec                ^>=3.1.15.0
    , parsec3-numbers       ^>=0.1.0
    , password              ^>=3.1.0.1
    , postgresql-simple     ^>=0.7.0.0
    , process               ^>=1.6.18.0
    , product-profunctors   ^>=0.11.1.0
    , profunctors           ^>=5.6.2
    , random                ^>=1.2.1.2
    , shakespeare           ^>=2.1.0.1
    , split                 ^>=0.2.5
    , stm                   ^>=2.5.3.1
    , tagsoup               ^>=0.14.8
    , template-haskell      ^>=2.21.0.0
    , temporary             ^>=1.3
    , text                  ^>=2.1.1
    , text-builder          ^>=0.6.7.2
    , text-manipulate       ^>=0.3.1.0
    , time                  ^>=1.12.2
    , tls                   ^>=2.1.1
    , transformers          ^>=0.6.1.0
    , unix                  ^>=2.8.4.0
    , utf8-string           ^>=1.0.2
    , vector                ^>=0.13.1.0
    , xdg-basedir           ^>=0.2.2
    , xml-conduit           ^>=1.9.1.3
    , xml-types             ^>=0.3.8
    , yaml                  ^>=0.11.11.2
    , yesod                 ^>=1.6.2.0
    , yesod-core            ^>=1.6.2.0
    , yesod-static          ^>=1.6.1.0

  default-extensions:
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    QuasiQuotes
    ScopedTypeVariables
    TemplateHaskell
    TupleSections
    TypeFamilies
    TypeOperators
    ViewPatterns

  default-language:   Haskell2010
  hs-source-dirs:     lib

test-suite korrvigs-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base          ^>=4.19.2.0
    , HUnit         ^>=1.6.2.0
    , korrvigs-lib
