cabal-version:   3.0
name:            korrvigs
version:         0.1.0.0
synopsis:        A wiki system for my personal use

-- description:
license:         MIT
license-file:    LICENSE
author:          DwarfMaster
maintainer:      korrvigs@dwarfmaster.net

-- copyright:
category:        Database
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common settings
  ghc-options:        -Wall
  default-extensions:
    FlexibleInstances
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    QuasiQuotes
    TemplateHaskell
    TupleSections
    TypeFamilies
    TypeOperators
    ViewPatterns

  default-language:   Haskell2010
  build-depends:
    , aeson                ^>=2.1.2.1
    , base                 ^>=4.17.2.0
    , bytestring           ^>=0.11.4.0
    , containers           ^>=0.6.5.0
    , data-default         ^>=0.7.1.0
    , extra                ^>=1.7.13
    , filepath             ^>=1.4.2.2
    , HUnit                ^>=1.6.2.0
    , lens                 ^>=5.2.3
    , linear               ^>=1.22
    , mtl                  ^>=2.2.2
    , opaleye              ^>=0.10.2.0
    , postgresql-simple    ^>=0.6.4
    , product-profunctors  ^>=0.11.1.0
    , profunctors          ^>=5.6.2
    , text                 ^>=2.0.2
    , time                 ^>=1.12.2

executable korrvigs-cli
  import:         settings
  main-is:        Main.hs
  hs-source-dirs: cli
  build-depends:  korrvigs-lib

library korrvigs-lib
  import:          settings
  exposed-modules:
    Korrvigs
    Korrvigs.Actions
    Korrvigs.Actions.Load
    Korrvigs.Actions.Remove
    Korrvigs.Actions.Sync
    Korrvigs.AllEntries
    Korrvigs.Entry
    Korrvigs.Entry.Def
    Korrvigs.Entry.Ident
    Korrvigs.Entry.Ident.Stopwords
    Korrvigs.Entry.SQL
    Korrvigs.FTS
    Korrvigs.FTS.Parser
    Korrvigs.FTS.Query
    Korrvigs.FTS.SQL
    Korrvigs.Geometry
    Korrvigs.Geometry.Def
    Korrvigs.Geometry.SQL
    Korrvigs.Geometry.WKB
    Korrvigs.Kind
    Korrvigs.Kind.Def
    Korrvigs.Kind.SQL
    Korrvigs.KindData
    Korrvigs.Link
    Korrvigs.Link.JSON
    Korrvigs.Link.SQL
    Korrvigs.Link.Sync
    Korrvigs.Metadata
    Korrvigs.Monad
    Korrvigs.Utils
    Korrvigs.Utils.DateTree
    Korrvigs.Utils.Opaleye

  build-depends:
    , base16-bytestring  ^>=1.0.2.0
    , binary             ^>=0.8.9.0
    , data-endian        ^>=0.1.1
    , directory          ^>=1.3.6.2
    , parsec             ^>=3.1.15.0
    , parsec3-numbers    ^>=0.1.0

  hs-source-dirs:  lib

test-suite korrvigs-test
  import:         settings

  -- other-modules:
  -- other-extensions:
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:  korrvigs-lib
