cabal-version:   3.0
name:            korrvigs
version:         0.1.0.0
synopsis:        A wiki system for my personal use

-- description:
license:         MIT
license-file:    LICENSE
author:          DwarfMaster
maintainer:      korrvigs@dwarfmaster.net

-- copyright:
category:        Database
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

executable korrvigs-cli
  main-is:            Main.hs
  default-language:   Haskell2010
  hs-source-dirs:     cli
  default-extensions: NoImplicitPrelude
  build-depends:      korrvigs-lib

library korrvigs-lib
  ghc-options:        -Wall
  exposed-modules:
    Korrvigs
    Korrvigs.Actions
    Korrvigs.Actions.Load
    Korrvigs.Actions.Remove
    Korrvigs.Actions.Sync
    Korrvigs.AllEntries
    Korrvigs.Cli
    Korrvigs.Cli.File
    Korrvigs.Cli.Info
    Korrvigs.Cli.Link
    Korrvigs.Cli.Monad
    Korrvigs.Cli.Note
    Korrvigs.Cli.Sync
    Korrvigs.Entry
    Korrvigs.Entry.Def
    Korrvigs.Entry.Ident
    Korrvigs.Entry.Ident.Stopwords
    Korrvigs.Entry.SQL
    Korrvigs.File
    Korrvigs.File.Mtdt
    Korrvigs.File.Mtdt.ExifTool
    Korrvigs.File.Mtdt.PdfToText
    Korrvigs.File.New
    Korrvigs.File.SQL
    Korrvigs.File.Sync
    Korrvigs.FTS
    Korrvigs.FTS.Parser
    Korrvigs.FTS.Query
    Korrvigs.FTS.SQL
    Korrvigs.Geometry
    Korrvigs.Geometry.Def
    Korrvigs.Geometry.SQL
    Korrvigs.Geometry.WKB
    Korrvigs.Kind
    Korrvigs.Kind.Def
    Korrvigs.Kind.SQL
    Korrvigs.KindData
    Korrvigs.Link
    Korrvigs.Link.JSON
    Korrvigs.Link.SQL
    Korrvigs.Link.Sync
    Korrvigs.Metadata
    Korrvigs.Monad
    Korrvigs.Note
    Korrvigs.Note.AST
    Korrvigs.Note.Helpers
    Korrvigs.Note.Pandoc
    Korrvigs.Note.Render
    Korrvigs.Note.Render.Monad
    Korrvigs.Note.Render.Table
    Korrvigs.Note.SQL
    Korrvigs.Note.Sync
    Korrvigs.Utils
    Korrvigs.Utils.Cycle
    Korrvigs.Utils.DateTree
    Korrvigs.Utils.Opaleye

  build-depends:
    , aeson                 ^>=2.1.2.1
    , array                 ^>=0.5.4.0
    , async                 ^>=2.2.4
    , base                  ^>=4.18.2.1
    , base16-bytestring     ^>=1.0.2.0
    , binary                ^>=0.8.9.0
    , bytestring            ^>=0.11.4.0
    , containers            ^>=0.6.5.0
    , data-default          ^>=0.7.1.0
    , data-endian           ^>=0.1.1
    , directory             ^>=1.3.6.2
    , extra                 ^>=1.7.13
    , filepath              ^>=1.4.2.2
    , hmatrix-glpk          ^>=0.19.0.0
    , HUnit                 ^>=1.6.2.0
    , lens                  ^>=5.2.3
    , linear                ^>=1.22
    , mime-types            ^>=0.1.2.0
    , monad-loops           ^>=0.4.3
    , mtl                   ^>=2.3.1
    , network-uri           ^>=2.6.4.2
    , opaleye               ^>=0.10.2.0
    , optparse-applicative  ^>=0.18.1.0
    , pandoc                ^>=3.1.11.1
    , pandoc-types          ^>=1.23.1
    , parsec                ^>=3.1.15.0
    , parsec3-numbers       ^>=0.1.0
    , postgresql-simple     ^>=0.7.0.0
    , process               ^>=1.6.18.0
    , product-profunctors   ^>=0.11.1.0
    , profunctors           ^>=5.6.2
    , temporary             ^>=1.3
    , text                  ^>=2.0.2
    , text-builder          ^>=0.6.7.2
    , time                  ^>=1.12.2
    , unix                  ^>=2.8.4.0
    , vector                ^>=0.13.1.0

  default-extensions:
    FlexibleInstances
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    QuasiQuotes
    TemplateHaskell
    TupleSections
    TypeFamilies
    TypeOperators
    ViewPatterns

  default-language:   Haskell2010
  hs-source-dirs:     lib

test-suite korrvigs-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:    korrvigs-lib
